# stablePortfolio

./: .gitmodules  README.md  stablePorfolio.cabal
SRC/App/: GenAlg.hs  MyIO.hs  PoolGenerator.hs  TestGenAlg.hs  UsefullFunc.hs
quotesDataBase/: prepareDB.py
with sqlite3/: DB_connector.hs  MyIODB.hs  SqlMaker.hs
