Name:                stablePortfolio
Version:             0.0
Description:         Return 3 Symbols in Portfolio which will have stable Close prise in input Period
License:             GPL
Author:              Evgene Oskin
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable stablePortfolio
  Main-is:           SRC/stablePortfolio.hs
  Build-Depends:     filepath, directory, regex-posix, old-locale, mtl, split, GA, random, containers, time, HDBC-sqlite3, HDBC, QuickCheck, base >= 3 && < 5